[package]
name = "AsyncNetEngine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
httparse = "1.8.0"
rustls = "0.23.4"
futures = "0.3.30"
webpki-roots = "0.26.1"
tokio-rustls = "0.26.0"
chrono = "0.4.35"
fs4 = { version = "0.8", features = ["tokio"] }
tokio-tungstenite = "*"