[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.6.1", features = [ "http-all", "fs-all", "dialog-all"] }
tokio = { version = "1.36.0", features = ["net"] }
httparse = "1.8.0"
futures = "0.3.30"
tokio-stream = "0.1.15"
serde = "1.0.201"
fs4 = { version = "0.8.3", features = ["tokio"] }
tokio-tungstenite = "0.23.0"
memory-stats = "1.1.0"
serde_json = "1.0.117"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
default = ["custom-protocol"]
custom-protocol = [ "tauri/custom-protocol" ]
